--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,27 @@
+@font-face {
+  font-family: crackhouse;
+  src: url('./fonts/crackhouse.ttf');
+  font-weight: 100;
+}
+
+* {
+  font-family: Open Sans, crackhouse, sans-serif;
+}
+
+.barra {
+  position: fixed;
+  top: 0%;
+  left: 0%;
+  width: 100%;
+  background: url('./icons/header-bg-long.jpg') #282323;
+  padding-top: 3rem;
+  box-shadow: 0 1px 2px #333;
+  z-index: 10;
+}
+
 #fondo {
-  position:fixed;
-  background: url("img/tile-5b.jpg") no-repeat center center fixed;
+  position: fixed;
+  background: url('img/tile-5b.jpg') no-repeat center center fixed;
   background-size: cover;
   width:100%;
   height:100%;
@@ -78,7 +99,7 @@
   color: white !important;
   font-size: 26pt;
   padding: 0;
-  z-index: 1;
+  z-index: 5;
   height: 2em;
   width: 2em;
   opacity: 0.7;
@@ -94,19 +115,31 @@
   color: white !important;
   font-size: 26pt;
   padding: 0;
-  z-index: 1;
+  z-index: 5;
   height: 2em;
   width: 2em;
   opacity: 0.7;
 }
 
 .num_carta {
-.num_carta {
   position: fixed;
-  top: 0.5%;
-  left: 1%;
+  top: 1%;
+  left: 2%;
   font-size: 2em;
   color: white;
   z-index: 17;
+  font-family: crackhouse;
 }
+
+.empezar:after {
+  right: 5%;
+  position: fixed;
+  top: 1%;
+  display: flex;
+  content: url('./icons/start.png');
+  max-width: 100%;
+  padding: 0;
+  z-index: 5;
+  height: 2em;
+  width: 2em;
 }
