--- a/style/main.css
+++ b/style/main.css
@@ -40,6 +40,7 @@
   margin-top: 0.75rem;
   border-radius: 0.5rem;
   box-shadow: -0.5rem 0.9rem 0.9rem 0.5rem rgba(0,0,0,80);
+  border: 0.1rem solid rgb(0, 0, 0);
   z-index: 2;
 }
 
@@ -53,6 +54,7 @@
   margin-top: 0.75rem;
   border-radius: 0.5rem;
   z-index: 3;
+  border: 0.1rem solid rgb(0, 0, 0);
 }
 
 @keyframes postcarta {
